--- a/Task22/bin/Task22.dll.config
+++ b/Task22/bin/Task22.dll.config
@@ -14,6 +14,8 @@
     <add name="DBConnectionString" connectionString="Data Source=LT-1401\SQLSERVER2016;Initial Catalog=ivydev;User ID=sa;Password=Mobility@ivy;" />
     <add name="ivydevConnectionString" connectionString="Data Source=LT-1401\SQLSERVER2016;Initial Catalog=ivydev;User ID=sa;Password=Mobility@ivy"
       providerName="System.Data.SqlClient" />
+    <add name="EmployeeConnectionString" connectionString="Data Source=LT-1401\SQLSERVER2016;Initial Catalog=Employee;User ID=sa"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
