--- a/Task22/bin/Task22.dll.config
+++ b/Task22/bin/Task22.dll.config
@@ -12,9 +12,12 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Task22-20220622113014.mdf;Initial Catalog=aspnet-Task22-20220622113014;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="DBConnectionString" connectionString="Data Source=LT-1401\SQLSERVER2016;Initial Catalog=ivydev;User ID=sa;Password=Mobility@ivy;" />
-    <add name="ivydevConnectionString" connectionString="Data Source=LT-1401\SQLSERVER2016;Initial Catalog=ivydev;User ID=sa;Password=Mobility@ivy"
+    <add name="DBCS" connectionString="Data Source=LT-1401\SQLSERVER2016;Initial Catalog=GeneralUser;User ID=sa;Password=Mobility@ivy;" />
+    <add name="ivydevConnectionString" connectionString="Data Source=LT-1401\SQLSERVER2016;Initial Catalog=ivydev;User ID=sa;Password=Mobility@ivy;"
       providerName="System.Data.SqlClient" />
-    <add name="EmployeeConnectionString" connectionString="Data Source=LT-1401\SQLSERVER2016;Initial Catalog=Employee;User ID=sa"
+    <add name="EmployeeConnectionString" connectionString="Data Source=LT-1401\SQLSERVER2016;Initial Catalog=Employee;User ID=sa;Password=Mobility@ivy;"
+      providerName="System.Data.SqlClient" />
+    <add name="GeneralUserConnectionString" connectionString="Data Source=LT-1401\SQLSERVER2016;Initial Catalog=GeneralUser;Persist Security Info=True;User ID=sa;Password=Mobility@ivy"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
